--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mocha": "^10.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.2.4",
+    "tracer": "^1.1.6"
   },
   "devDependencies": {
     "chai": "^4.3.7",
