--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "expected": "^0.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mocha": "^10.2.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.2.4",
     "tracer": "^1.1.6"
   },
   "devDependencies": {
     "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "request": "^2.88.2",
     "should": "^13.2.3"
   }
