fixed the tests

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocha": "^10.2.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.2.4",
+    "supertest": "^6.3.3",
     "tracer": "^1.1.6"
   },
   "devDependencies": {
