--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: Testing and deployment
-env:
-  MYSQL_ROOT_PASSWORD: 'root'
-  DB_DATABASE: 'shareameal'
+
 on:
   push:
     branches:
@@ -14,7 +12,7 @@ jobs:
       MYSQL_ROOT_PASSWORD: root # default root password to use must be 'root'
       DB_HOST: '127.0.0.1'
       DB_PORT: '3306'
-      DB_DATABASE: share_a_meal
+      DB_DATABASE: share-a-meal
       DB_USER: root
       DB_PASSWORD: root
     services:
@@ -36,6 +34,10 @@ jobs:
         run: |
           mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} < share-a-meal.sql
           mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} -e "SHOW TABLES;"
+
+      - name: npm install mocha
+        run: |
+          npm i -g mocha
 
       - name: npm install
         run: |
