changed main.yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
     needs: integrationtests
     runs-on: ubuntu-latest
     environment:
-      name: railway # naam van mijn environment op GitHub
+      name: Railway # naam van mijn environment op GitHub
     steps:
       - name: Clone repository
         uses: actions/checkout@main
