--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.0",
+    "mariadb": "^3.1.2",
     "mocha": "^10.2.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.2.4",
