--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,16 +32,14 @@ jobs:
 
       - name: Import database script
         run: |
-          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} < share_a_meal.sql
+          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} < share-a-meal.sql
           mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} -e "SHOW TABLES;"
-
-      - name: npm install mocha
-        run: |
-          npm i -g mocha
 
       - name: npm install
         run: |
           npm install
+
+
   #   Heroku-deploy:
   #     needs: integrationtests
   #     runs-on: ubuntu-latest
