--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "request": "^2.88.2",
     "should": "^13.2.3"
   }
