--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       MYSQL_ROOT_PASSWORD: root # default root password to use must be 'root'
       DB_HOST: '127.0.0.1'
       DB_PORT: '3306'
-      DB_DATABASE: shareameal
+      DB_DATABASE: share_a_meal
       DB_USER: root
       DB_PASSWORD: root
     services:
@@ -28,7 +28,7 @@ jobs:
           sudo /etc/init.d/mysql start
           sudo apt-get install -y mysql-client
           mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "SHOW DATABASES;"
-          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE shareameal;"
+          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE ${{env.DB_DATABASE}};"
 
       - name: Import database script
         run: |
@@ -38,7 +38,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-#cant get this to work test stop
+
       - name: npm test
         run: |
           npm test -- --DB_PASSWORD {{env.MYSQL_ROOT_PASSWORD}} --DB_USER root --DB_NAME ${{env.DB_DATABASE}}
