--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ jobs:
       DB_PORT: '3306'
       DB_DATABASE: share_a_meal
       DB_USER: root
-      DB_PASSWORD: root
     services:
       mysql:
         image: mysql:5.7
@@ -27,13 +26,13 @@ jobs:
         run: |
           sudo /etc/init.d/mysql start
           sudo apt-get install -y mysql-client
-          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "SHOW DATABASES;"
-          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE ${{env.DB_DATABASE}};"
+          mysql -u root -e "SHOW DATABASES;"
+          mysql -u root -e "CREATE DATABASE ${{env.DB_DATABASE}};"
 
       - name: Import database script
         run: |
-          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} < share-a-meal.sql
-          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} -e "SHOW TABLES;"
+          mysql -uroot  ${{env.DB_DATABASE}} < share-a-meal.sql
+          mysql -uroot  ${{env.DB_DATABASE}} -e "SHOW TABLES;"
 
       - name: npm install
         run: |
