--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,9 @@ jobs:
       MYSQL_ROOT_PASSWORD: root # default root password to use must be 'root'
       DB_HOST: '127.0.0.1'
       DB_PORT: '3306'
-      DB_DATABASE: shareameal
+      DB_DATABASE: share_a_meal
       DB_USER: root
+      DB_PASSWORD: root
     services:
       mysql:
         image: mysql:5.7
@@ -26,13 +27,13 @@ jobs:
         run: |
           sudo /etc/init.d/mysql start
           sudo apt-get install -y mysql-client
-          mysql -u root -e "SHOW DATABASES;"
-          mysql -u root -e "CREATE DATABASE ${{env.DB_DATABASE}};"
+          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "SHOW DATABASES;"
+          mysql -uroot -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE ${{env.DB_DATABASE}};"
 
       - name: Import database script
         run: |
-          mysql -uroot  ${{env.DB_DATABASE}} < share-a-meal.sql
-          mysql -uroot  ${{env.DB_DATABASE}} -e "SHOW TABLES;"
+          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} < share-a-meal.sql
+          mysql -uroot -p${{env.MYSQL_ROOT_PASSWORD}} ${{env.DB_DATABASE}} -e "SHOW TABLES;"
 
       - name: npm install
         run: |
@@ -41,6 +42,7 @@ jobs:
       - name: npm test
         run: |
           npm test -- --DB_PASSWORD {{env.MYSQL_ROOT_PASSWORD}} --DB_USER root --DB_NAME ${{env.DB_DATABASE}}
+          
 
   #   Heroku-deploy:
   #     needs: integrationtests
