--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,10 @@ jobs:
       - name: npm install
         run: |
           npm install
-
+          
+      - name: npm run test
+        run: |
+          npm run test
 
   #   Heroku-deploy:
   #     needs: integrationtests
