--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha -reporter spec test/**/*.test.js --exit"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
